    radial rho axis rather than using a rectangular x/y axis.

 ** linkprop has been completely re-coded for performance and Matlab
    compatibility.  It now returns a linkprop object which must be stored
    in a variable for as long as the graphic objects should remain linked.
    To unlink properties use 'clear hlink' where hlink is the variable
    containing the linkprop object.

 ** Other new functions added in 4.2:

      bandwidth            isbanded        javachk
      dir_in_loadpath      isdiag          linkaxes
      hgload               istril          numfields
      hgsave               istriu

 ** Deprecated functions.

    The following functions have been deprecated in Octave 4.2 and will
    be removed from Octave 4.6 (or whatever version is the second major
    release after 4.2):

      bicubic
      find_dir_in_path
      nfields

    The following functions were deprecated in Octave 3.8 and have been
    removed from Octave 4.2.

      default_save_options    java_new            
      gen_doc_cache           java_unsigned_conversion  
      interp1q                javafields                
      isequalwithequalnans    javamethods               
      java_convert_matrix     re_read_readline_init_file
      java_debug              read_readline_init_file   
      java_invoke             saving_history            
                              
    The following keywords were deprecated in Octave 3.8 and have been
    removed from Octave 4.2

      static

    The following configuration variables were deprecated in Octave 3.8
    and have been removed from Octave 4.2

      CC_VERSION  (now GCC_VERSION)
      CXX_VERSION (now GXX_VERSION)

    The internal class <Octave_map> was deprecated in Octave 3.8 and has
    been removed from Octave 4.2.  Replacement classes are
    <octave_map> (struct array) or <octave_scalar_map> for a single structure.

Summary of important user-visible changes for version 4.0: