@@ -54,6 +54,10 @@ Summary of important user-visible changes for version 4.2:
     To unlink properties use 'clear hlink' where hlink is the variable
     containing the linkprop object.
 
+ ** The new warning ID "Octave:data-file-in-path" replaces the three
+    previous separate warning IDs "Octave:fopen-file-in-path",
+    "Octave:load-file-in-path", and "Octave:md5sum-file-in-path".
+
  ** Other new functions added in 4.2:
 
       bandwidth            isbanded        javachk
